# src/main/kotlin/io/tohuwabohu/kamifusen/crud/dto/PageHitDto.kt
@@ -1,6 +1,0 @@
-package io.tohuwabohu.kamifusen.crud.dto
-
-data class PageHitDto(
-    var path: String,
-    var domain: String
-)
